tests/rosetta/transpiler/Pascal/associative-array-creation.error
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/rosetta/transpiler/Pascal/associative-array-creation.pas
fgl.pp(1668,8) Note: Call to subroutine "function TFPGMap<System.ShortString,System.LongInt>.IndexOf(const AKey:ShortString):LongInt;" marked as inline is not inlined
fgl.pp(1668,8) Note: Call to subroutine "function TFPGMap<System.ShortString,System.Variant>.IndexOf(const AKey:ShortString):LongInt;" marked as inline is not inlined
associative-array-creation.pas(47,3) Note: Call to subroutine "procedure TFPGMap<System.ShortString,System.LongInt>.AddOrSetData(const AKey:ShortString;const AData:LongInt);" marked as inline is not inlined
associative-array-creation.pas(48,3) Note: Call to subroutine "procedure TFPGMap<System.ShortString,System.LongInt>.AddOrSetData(const AKey:ShortString;const AData:LongInt);" marked as inline is not inlined
associative-array-creation.pas(49,3) Note: Call to subroutine "procedure TFPGMap<System.ShortString,System.LongInt>.AddOrSetData(const AKey:ShortString;const AData:LongInt);" marked as inline is not inlined
associative-array-creation.pas(61,6) Error: Incompatible types: got "LongInt" expected "ShortString"
associative-array-creation.pas(62,60) Error: Incompatible type for arg no. 1: Got "LongInt", expected "ShortString"
associative-array-creation.pas(60,24) Error: Cannot find an enumerator for the type "TFPGMap$2$crcD929FFD2"
associative-array-creation.pas(65,8) Warning: Local variable "removeKey_out" does not seem to be initialized
associative-array-creation.pas(74,13) Error: Incompatible types: got "TFPGMap<System.ShortString,System.Variant>" expected "TFPGMap<System.ShortString,System.LongInt>"
associative-array-creation.pas(98) Fatal: There were 4 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
